@@ -50,6 +50,9 @@ namespace QuantLib {
         <li>Election Days</li>
         </ul>
 
+        Note that there are some one-off holidays not listed above.
+        See the implementation for the complete list.
+
         \ingroup calendars
     */
     class SouthAfrica : public Calendar {
